--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_API_URL=coffee-shop-backend-production-1275.up.railway.app
+VITE_API_URL=https://coffee-shop-backend-production-1275.up.railway.app/api
